# quadtree

./: .gitattributes  .gitignore
assets/configuration/: settings.json
assets/filters/: blur.fs  invert.fs  invert.vs
assets/shaders/: line.fs  line.vs  postproc.fs  postproc.vs  sprite.fs  sprite.vs  text_sdf.fs  text_sdf.vs  wm.vs
source/gimp/: blocks.xcf  border.xcf
src/: CMakeLists.txt  main.cpp
src/core/: asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  display.cpp  display.h  font_writer.cpp  font_writer.h  light.cpp  light.h  mouse.cpp  mouse.h  post_processor.cpp  post_processor.h  screen.cpp  screen.h  settings.cpp  settings.h  shader.cpp  shader.h  synthesizer.cpp  synthesizer.h  visualizer.cpp  visualizer.h
src/quadtree/: field.cpp  field.h  quadtree.h
src/util/: mathfunc.cpp  mathfunc.h  pngfuncs.cpp  pngfuncs.h
